--- a/ms_2_methods.Rmd
+++ b/ms_2_methods.Rmd
@@ -28,21 +28,17 @@ _Distribution alignment - overlap as proxy for common understanding; use Bayesia
 
 Dividing the plot into quadrants based on mean values along each axis, we roughly categorized four qualities of alignment, and for each taxonomic group, based on IUCN taxonomic groupings, determined the proportion of species that fell into each quality category (2B).  
 
-Noting that a large proportion of corals were identified in the upper-left quadrant, we examined a handful of IUCN coral maps and found that each predicted coral presence in far deeper waters than would be expected based on the IUCN's habitat description.  To examine this issue further, we created a 200 m bathymetry raster from Natural Earth's 200 m bathymetry polygon [@natural_earth???] and masked our IUCN coral rasters to constrain the maps to shallow waters.  None of the paired-map corals is described as occurring deeper than 200 m, ___and most are found in far shallower waters.___  The resulting maps were again compared to the AquaMaps rasters; ___figure X___ plots shifts in coral species alignment due to this depth clipping.
+Noting that a large proportion of corals were identified in the upper-left quadrant, we examined a handful of IUCN coral maps and found that each predicted coral presence in far deeper waters than would be expected based on the IUCN's habitat description.  Using the IUCN's API [REF] to find life history information for all IUCN-mapped corals, we found that none of the paired-map corals is described as occurring deeper than 200 m, ___and most are found in far shallower waters.___  We created a 200 m bathymetry raster from Natural Earth's 200 m bathymetry polygon [@natural_earth_XXX] and masked our IUCN coral rasters to exclude presence below 200 m.  The resulting maps were again compared to the AquaMaps rasters; ___figure XXXX___ plots shifts in coral species alignment due to this depth clipping. ___does some of this belong in the results/discussion?___
 
 **Methods for Ocean Health Index (OHI) case study:**
-The Species component of the OHI Biodiversity goal (SPP) uses IUCN Red List extinction risk as a proxy for a species' health.  Each species is assigned a risk score based on IUCN Red List extinction risk category, from Least Concern (0.0) to Extinct (1.0) (Data Deficient and unassessed species are excluded).  Species range is determined from its IUCN range map, where available, or its AquaMaps range map ("presence" defined as a 40% or greater probability of occurrence) if an IUCN map is unavailable.  For each assessed OHI region, an area-weighted mean extinction risk across all species is calculated, and rescaled from 0 (mean extinction risk = 0.75) to 100 (mean extinction risk = 0) [@halpern_index_2012; @halpern_patterns_2015].  
+The Species component of the OHI Biodiversity goal (SPP) uses IUCN Red List extinction risk as a proxy for a species' health.  Each species is assigned a risk score based on IUCN Red List extinction risk category, from Least Concern (0.0) to Extinct (1.0) (Data Deficient and unassessed species are excluded).  Species range is determined from its IUCN range map, where available, or its AquaMaps range map ("presence" defined as a 40% or greater probability of occurrence) if an IUCN map is unavailable.  For each assessed OHI region, an area-weighted mean extinction risk across all species is calculated, and rescaled to calculate a status score from 0 (mean extinction risk = 0.75) to 100 (mean extinction risk = 0) [@halpern_index_2012; @halpern_patterns_2015].  
 
-___For our analysis, we modified the original code for OHI 2015 Species status, allowing for flexibility in which data source was used for the overlapping species, and flexibility in modifying the AquaMaps presence threshold.  Using the output of the published OHI 2015 SPP status as our baseline, we ran the modified SPP code three times: once with IUCN  prioritizing IUCN over AquaMaps for a 0% threshold, and prioritizing AquaMaps over IUCN for both a 40% and 0% threshold.  We compared each of these to the output of the published OHI 2015 SPP status.___
+_To highlight the differences in the datasets, we selected the subset of species whose ranges are represented in both datasets, eliminating species found in only one or the other dataset.  In the original OHI SPP analysis, IUCN data was used to determine ranges for these overlapping species; we calculated all regional SPP status scores for just these species as our baseline.  We then recalculated the scores using AquaMaps ranges at a 40% presence threshold (as used in the original OHI analysis) and a 0% threshold (to better simulate the "limits of distribution" defined by IUCN maps) and compared them to our IUCN baseline._
 
-_To highlight the differences in the datasets, we selected the subset of species whose ranges are represented in both datasets.  In the original OHI SPP analysis, IUCN data was used to determine ranges for these overlapping species; we calculated the SPP status for these species as our baseline.  We then recalculated using AquaMaps ranges at a 40% presence threshold (as used in the original OHI analysis) and a 0% threshold (to better simulate the "limits of distribution" defined by IUCN maps) and compared them to our IUCN baseline._
-
-_We then modified the original OHI source code to recalculate the 2015 SPP status, using AquaMaps rather than IUCN for the overlapping species, and setting a 0% presence threshold on all AquaMaps species ranges.  This we compared to the original SPP status scores for 2015._
-
-* ___overlapping species only? IUCN as baseline; AM 40%; AM 0%___
+_We then modified the original OHI source code to recalculate the 2015 SPP status scores for all regions and all species to examine the effects of changing the AquaMaps presence threshold from 40% to 0% (all range included), and the effects of changing the data source for the overlapping species from IUCN to AquaMaps.  We calculated the differences between these results and the published SPP status scores for 2015._
 
 **Methods for MPA Gap Analysis case study:** 
-To assess the effectiveness of MPAs in protecting biodiversity, Klein et al. [-@klein_shortfalls_2015] compared the coverage of the global MPA network presented by the World Database on Protected Areas (WDPA) [@iucn_world_2014] to the species ranges described in the 2014 AquaMaps dataset.  For this study, the researchers defined "presence" as 50% or greater probability of occurrence.  
+To assess the effectiveness of MPAs in protecting biodiversity, Klein et al. [-@klein_shortfalls_2015] compared the coverage of the global MPA network presented by the World Database on Protected Areas (WDPA) [@iucn_world_2014] to the species ranges described in the 2014 AquaMaps dataset [@aquamaps_XXX].  For the primary analysis, the researchers defined species "presence" as 50% or greater probability of occurrence.  
 
 To reconstruct the primary analysis, we selected the subset of protected areas from the 2014 WDPA dataset classified as IUCN protected area management categories I-IV and spatially covering a marine area. The WDPA polygons and marine polygons were rasterized to 0.01° and then aggregated to AquaMaps native 0.5° cells, to calculate proportion of marine protected area within each cell.  After verifying our results using the 2014 AquaMaps dataset, we updated the analysis to use the 2015 AquaMaps dataset, at a presence threshold of 50% (to compare to Klein et al. directly) and 0% (to better compare with IUCN spatial data).  To analyze MPA coverage against IUCN spatial data, we extracted IUCN polygon weights per 0.5° cell for each species and compared against the protected area raster.  Finally, we combined AquaMaps data (at 0% threshold) and IUCN data, using AquaMaps for the `r format(n_spp_both, big.mark = ',')` overlapping species and again compared against the protected area raster.
 
